homebridge/base/deployment.yml
---
kind: "Deployment"
apiVersion: "apps/v1"
metadata:
  name: "homebridge"
spec:
  replicas: 1
  selector:
    matchLabels:
      app: "homebridge"
  strategy:
    # you need to recreate so that the RWO PVC works
    type: "Recreate"
  template:
    spec:
      # you need to use the host's networking stack to publish mDNS packets.
      hostNetwork: true
      containers:
        - name: "homebridge"
          image: "homebridge/homebridge:2026-02-01"
          # avahi present by default, turn it off (use ciao)
          # https://github.com/oznu/docker-homebridge/issues/437
          ports:
            - containerPort: 8581
              name: "homebridge-http"
              protocol: "TCP"
          #   - containerPort: 5353
          #     name: "homebridge-mdns"
          #     protocol: "UDP"
          volumeMounts:
            - mountPath: "/homebridge"
              name: "homebridge-pvc"
            - mountPath: "/homebridge/auth.json"
              name: "homebridge-auth"
              subPath: "auth.json"
          resources:
            requests:
              cpu: "250m"
              memory: "250Mi"
            limits:
              cpu: "1"
              memory: "2Gi"
      volumes:
        - name: "homebridge-pvc"
          persistentVolumeClaim:
            claimName: "homebridge-pvc"
        - name: "homebridge-auth"
          configMap:
            name: "homebridge-auth"
