homebridge/base/service.yml
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "homebridge-http"
spec:
  selector:
    app: "homebridge"
  ports:
    - port: 8581
      name: "homebridge-http"
      targetPort: 8581
      protocol: "TCP"
---
apiVersion: "v1"
kind: "Service"
metadata:
  name: "homebridge-mdns"
spec:
  type: "NodePort"
  selector:
    app: "homebridge"
  ports:
    - port: 5353
      name: "homebridge-mdns"
      protocol: "UDP"
